# ESL-JIWY-Group45

./: README.md
CMakeProject/: CMakeLists.txt  FaceDetection.cpp  FaceDetection.h  OpenCVProject.cpp  SerialConnection.cpp  SerialConnection.h  build.sh  buildarm.sh
CMakeProject/arm_build/: CMakeCache.txt  Makefile  Overo  cmake_install.cmake
Nios/: main.c
OpenCVProject/: .cproject  .project
OpenCVProject/Debug/: makefile
OpenCVProject/Debug/src/: subdir.mk
OpenCVProject/src/: AngleConvert.cpp  AngleConvert.h  FaceDetection.h  OpenCVProject.cpp  SerialConnection.cpp  SerialConnection.h
